--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 streamlit
 streamlit-aggrid==0.2.2-2
 click==8
-seaborn
 pandas==1.5.3
 numpy==1.26.4
 matplotlib
 sciviso
 levseq-vis>=1.2.6
+ninetysix
+scikit-learn
+statsmodels
+tqdm
